Fix documentation validation tests